test/corpus/procedures.txt
==================
Main procedure
==================

main :: () { }

---

(source_file
  (procedure_declaration
    (identifier)
    (procedure
      (parameters)
      (block)
    )
  )
)

==================
Procedure with params
==================

add :: (a: s32, b: s32) { }

---

(source_file
  (procedure_declaration
    (identifier)
    (procedure
      (parameters
        (parameter
          (identifier)
          (type
            (identifier)
          )
        )
        (parameter
          (identifier)
          (type
            (identifier)
          )
        )
      )
      (block)
    )
  )
)

==================
Procedure with return type
==================

procedure :: () -> s32 { }

---

(source_file
  (procedure_declaration
    (identifier)
    (procedure
      (parameters)
      (type
        (identifier)
      )
      (block)
    )
  )
)

==================
Procedure with return statement
==================

procedure :: () -> s32 { 
  return 0;
}

---

(source_file
  (procedure_declaration
    (identifier)
    (procedure
      (parameters)
      (type
        (identifier)
      )
      (block
        (return_statement
          (number)
        )
      )
    )
  )
)

==================
Procedure with multiple returns
==================

procedure :: () -> s32, s32 { 
  return 0, 17;
}

---

(source_file
  (procedure_declaration
    (identifier)
    (procedure
      (parameters)
      (type
        (identifier)
      )
      (type
        (identifier)
      )
      (block
        (return_statement
          (number)
          (number)
        )
      )
    )
  )
)

==================
Procedure with named returns
==================

procedure :: () -> (a: s32, b: s32) { 
  return 1, 2;
}

---

(source_file
  (procedure_declaration
    (identifier)
    (procedure
      (parameters)
      (named_type
        (identifier)
        (type (identifier))
      )
      (named_type
        (identifier)
        (type (identifier))
      )
      (block
        (return_statement
          (number)
          (number)
        )
      )
    )
  )
)

==================
Procedure with named returns without parenthesis
==================

procedure :: () -> a: s32, b: s32 { 
  return 1, 2;
}

---

(source_file
  (procedure_declaration
    (identifier)
    (procedure
      (parameters)
      (named_type
        (identifier)
        (type (identifier))
      )
      (named_type
        (identifier)
        (type (identifier))
      )
      (block
        (return_statement
          (number)
          (number)
        )
      )
    )
  )
)

==================
Procedure with parameters and a return statement with an add
==================

add :: (a: s64, b: s64) -> s64 { 
  return a + b;
}

---

(source_file
  (procedure_declaration
    (identifier)
    (procedure
      (parameters
        (parameter
          (identifier)
          (type
            (identifier)
          )
        )
        (parameter
          (identifier)
          (type
            (identifier)
          )
        )
      )
      (type
        (identifier)
      )
      (block
        (return_statement
          (binary_expression
            (identifier)
            (identifier)
          )
        )
      )
    )
  )
)

==================
Calling a procedure to fill a variable
==================

a := compute();

---

(source_file
  (variable_declaration
    (identifier)
    (call_expression
      (identifier)
    )
  )
)

==================
Calling a procedure with parameters to fill a variable
==================

a := add(1, 2);

---

(source_file
  (variable_declaration
    (identifier)
    (call_expression
      (identifier)
      (number)
      (number)
    )
  )
)

==================
Calling a procedure with named parameters to fill a variable
==================

a := add(a = 1, b = 2);

---

(source_file
  (variable_declaration
    (identifier)
    (call_expression
      (identifier)
      (identifier)
      (number)
      (identifier)
      (number)
    )
  )
)
