test/corpus/uninit-variable.txt
==================
Uninitialized variable
==================

x: u32;

---

(source_file
  (declaration
    (var_declaration
      (expression
        (identifier)
      )
      (type
        (identifier)
      )
    )
  )
)